modified final eval notebook for execution

--- a/final_evaluation.ipynb
+++ b/final_evaluation.ipynb
@@ -10,6 +10,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ALL_PROBLEM_CLASSES = [\n",
+    "    \"algebra\",\n",
+    "    \"counting_and_probability\",\n",
+    "    \"geometry\",\n",
+    "    \"intermediate_algebra\",\n",
+    "    \"number_theory\",\n",
+    "    \"prealgebra\",\n",
+    "    \"precalculus\",\n",
+    "]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -17,68 +32,26 @@
    "source": [
     "import logging\n",
     "import json\n",
-    "from testing_our_method import test_accuracy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from constants import ALL_PROBLEM_CLASSES"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from testing_our_method import test_accuracy\n",
+    "from constants import ALL_PROBLEM_CLASSES\n",
     "import os\n",
+    "\n",
     "os.environ[\"TOKENIZERS_PARALLELISM\"] = \"false\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Testing on dataset 'algebra' with levels [1, 2, 3, 4, 5].\n",
-      "Level 1: 1 problem(s) sampled\n",
-      "Level 2: 1 problem(s) sampled\n",
-      "Level 3: 0 problem(s) sampled\n",
-      "Level 4: 0 problem(s) sampled\n",
-      "Level 5: 0 problem(s) sampled\n",
-      "[1.0, 1.0, 0, 0, 0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Test\n",
-    "from testing_our_method import subsample\n",
-    "problem_class = \"algebra\"\n",
-    "dataset_path = os.path.join(\n",
-    "    os.getcwd(), \"merged_dataset\", \"test\", problem_class, \"final.json\"\n",
-    ")\n",
-    "dataset = json.load(open(dataset_path))\n",
-    "dataset = subsample(dataset, 2)\n",
-    "print(\n",
-    "    test_accuracy(\n",
-    "        data_class=problem_class,\n",
-    "        dataset=dataset,\n",
-    "        coding_llm=\"codegemma\",\n",
-    "        main_solver_llm=\"llama3-70b-8192\",\n",
-    "        judging_llm=\"llama3-70b-8192\",\n",
-    "        levels=[1, 2, 3, 4, 5],\n",
-    "        use_rag=True,\n",
-    "        logging_level=logging.ERROR,\n",
-    "    )\n",
-    ")"
+    "# Define the models to use\n",
+    "CODING_LLM = \"codellama\"\n",
+    "MAIN_SOLVER_LLM = \"llama3-70b-8192\"\n",
+    "JUDGING_LLM = \"llama3-70b-8192\"\n",
+    "\n",
+    "# Use RAG\n",
+    "use_rag = True"
    ]
   },
   {
@@ -87,24 +60,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for problem_class in ALL_PROBLEM_CLASSES:\n",
+    "def test_class(problem_class_number):\n",
+    "    problem_class = ALL_PROBLEM_CLASSES[problem_class_number]\n",
     "    dataset_path = os.path.join(\n",
     "        os.getcwd(), \"merged_dataset\", \"test\", problem_class, \"final.json\"\n",
     "    )\n",
     "    dataset = json.load(open(dataset_path))\n",
-    "    acc = test_accuracy(\n",
+    "    correct_num, prob_num, fail_coding_num, fail_judging_num = test_accuracy(\n",
     "        data_class=problem_class,\n",
     "        dataset=dataset,\n",
-    "        coding_llm=\"llama3-70b-8192\",\n",
-    "        main_solver_llm=\"llama3-70b-8192\",\n",
-    "        judging_llm=\"llama3-70b-8192\",\n",
+    "        coding_llm=CODING_LLM,\n",
+    "        main_solver_llm=MAIN_SOLVER_LLM,\n",
+    "        judging_llm=JUDGING_LLM,\n",
     "        levels=[1, 2, 3, 4, 5],\n",
-    "        use_rag=True,\n",
+    "        use_rag=use_rag,\n",
     "        logging_level=logging.ERROR,\n",
     "    )\n",
-    "    # Weighted average of accuracy with most weightage to the highest level\n",
-    "    mean_acc = sum([acc[i] * i for i in range(1, len(acc))]) / sum(range(1, len(acc)))\n",
-    "    print(f\"Weighted Mean Accuracy for {problem_class}: {mean_acc}\")"
+    "    print(f\"Correctly Solved Problems: {correct_num}\")\n",
+    "    print(f\"Total Number of Problems: {prob_num}\")\n",
+    "    print(f\"Problems where Coding execution fails: {fail_coding_num}\")\n",
+    "    print(f\"Problems where Judging LLM fails: {fail_judging_num}\")"
    ]
   },
   {
@@ -112,7 +87,63 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test_class(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_class(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_class(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_class(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_class(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_class(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_class(6)"
+   ]
   }
  ],
  "metadata": {
