update the code LLM

--- a/final_evaluation.ipynb
+++ b/final_evaluation.ipynb
@@ -40,15 +40,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "LLMS TO TRY = [\n",
+    "    \"llama3-70b-8192\",\n",
+    "    \"llama3-8b-8192\",\n",
+    "    \"mixtral-8x7b-32768\",\n",
+    "    \"gemma-7b-it\",\n",
+    "]"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the models to use\n",
-    "CODING_LLM = \"codellama\"\n",
+    "CODING_LLM = \"codellama:7b-python-q6_K\"\n",
     "MAIN_SOLVER_LLM = \"llama3-70b-8192\"\n",
-    "JUDGING_LLM = \"llama3-70b-8192\"\n",
+    "JUDGING_LLM = \"gpt-3.5-turbo\"\n",
     "\n",
     "# Use RAG\n",
     "use_rag = True"
@@ -56,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
