use deepseek for code LLM and reduce max coding attempt to 3

--- a/final_evaluation.ipynb
+++ b/final_evaluation.ipynb
@@ -58,7 +58,7 @@
    "outputs": [],
    "source": [
     "# Define the models to use\n",
-    "CODING_LLM = \"codellama:7b-python-q6_K\"\n",
+    "CODING_LLM = \"deepseek-coder:6.7b-instruct-q8_0\"\n",
     "MAIN_SOLVER_LLM = \"llama3-70b-8192\"\n",
     "JUDGING_LLM = \"gpt-3.5-turbo\"\n",
     "\n",
