--- a/experiments/test_huggingface.ipynb
+++ b/experiments/test_huggingface.ipynb
@@ -228,7 +228,7 @@
    ],
    "source": [
     "from transformers import AutoTokenizer\n",
-    "import transformers \n",
+    "import transformers\n",
     "import torch\n",
     "model = \"PY007/TinyLlama-1.1B-step-50K-105b\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(model)\n",
@@ -307,9 +307,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:root] *",
+   "display_name": ".venv",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -321,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
